# autopmob-agent

./: .gitignore  DB_equation.json  DB_variable.json  README.md  README_JP.md  doc.json  eqs.json  extraction_summary.json  pyproject.toml  vars.json
configs/: cstr-sample.yaml  cstr-sample2.yaml
evaluation/db_organizer/: paper_1,2.json
evaluation/extractor/: evaluation.py  ground_truth.json  predictions.json  run_eval.py
evaluation/extractor/result/: result_equations.csv  result_variables.csv
langchain/: __init__.py  driver.py  langchain.py
prompts/type_1/: extractor.yaml  model_builder.yaml  organizer.yaml
scripts/: __init__.py  autopmoblangchain.py  driver.py  model_builder_agent.py
src/: classify_extract_vlm.py  main.py  schema_docjson.py
src_1/: classify_extract_vlm.py  main.py  pdf_to_images.py  schema_docjson.py
